--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -686,5 +686,18 @@
   "「東京都発熱相談センター」の開設に伴い、「新型コロナ受診相談窓口」は終了したため、10月30日（金曜日）17時をもって本グラフの数値更新を終了しました。": "「東京都発熱相談センター」の開設に伴い、「新型コロナ受診相談窓口」は終了したため、10月30日（金曜日）17時をもって本グラフの数値更新を終了しました。",
   "「東京都発熱相談センターにおける相談件数グラフ」はこちら。": "「東京都発熱相談センターにおける相談件数グラフ」はこちら。",
   "新型コロナウイルス感染拡大防止のため、特別区及び多摩地域の各市町村の飲食店等に営業時間の短縮要請が行われることに伴い、要請に全面的にご協力いただける中小の事業者の皆様に対し、協力金を支給します。": "新型コロナウイルス感染拡大防止のため、特別区及び多摩地域の各市町村の飲食店等に営業時間の短縮要請が行われることに伴い、要請に全面的にご協力いただける中小の事業者の皆様に対し、協力金を支給します。",
-  "営業時間短縮に係る感染拡大防止協力金（11/28～12/17実施分）": "営業時間短縮に係る感染拡大防止協力金（11/28～12/17実施分）"
+  "営業時間短縮に係る感染拡大防止協力金（11/28～12/17実施分）": "営業時間短縮に係る感染拡大防止協力金（11/28～12/17実施分）",
+  "相模原市による公式情報と客観的な数値をわかりやすく伝えることで、相模原市にお住まいの方や、相模原市内に拠点を持つ企業の方、相模原市を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。": "相模原市による公式情報と客観的な数値をわかりやすく伝えることで、相模原市にお住まいの方や、相模原市内に拠点を持つ企業の方、相模原市を訪れる方が、現状を把握して適切な対策を取れるようにすることを目的としています。",
+  "相模原市": "相模原市",
+  "項目一覧": "項目一覧",
+  "相模原市公式ホームページ": "相模原市公式ホームページ",
+  "市内の最新感染動向": "市内の最新感染動向",
+  "市公式サイトで見る": "市公式サイトで見る",
+  "相模原市新型コロナウイルス感染症対策本部報": "相模原市新型コロナウイルス感染症対策本部報",
+  "市長からのメッセージ": "市長からのメッセージ",
+  "当サイトに掲載されている情報の正確性については万全を期していますが、相模原市は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。": "当サイトに掲載されている情報の正確性については万全を期していますが、相模原市は利用者が当サイトの情報を用いて行う一切の行為について責任を負うものではありません。",
+  "市民の皆様へ": "市民の皆様へ",
+  "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、東京都が開設したものを相模原市向けに改変したものです。": "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、東京都が開設したものを相模原市向けに改変したものです。",
+  "市民利用施設・都主催イベントに関する情報": "市民利用施設・都主催イベントに関する情報",
+  "新型コロナウイルス感染症が心配なときに.title": "新型コロナウイルス感染症が心配なときに.title"
 }
