--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -699,5 +699,14 @@
   "市民の皆様へ": "市民の皆様へ",
   "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、東京都が開設したものを相模原市向けに改変したものです。": "当サイトは新型コロナウイルス感染症 (COVID-19) に関する最新情報を提供するために、東京都が開設したものを相模原市向けに改変したものです。",
   "市民利用施設・都主催イベントに関する情報": "市民利用施設・都主催イベントに関する情報",
-  "新型コロナウイルス感染症が心配なときに.title": "新型コロナウイルス感染症が心配なときに.title"
+  "新型コロナウイルス感染症が心配なときに.title": "新型コロナウイルス感染症が心配なときに.title",
+  "相模原市 新型コロナウイルス感染症 事業者支援情報": "相模原市 新型コロナウイルス感染症 事業者支援情報",
+  "新型コロナウイルス感染症に強い店づくり家づくり応援助成金": "新型コロナウイルス感染症に強い店づくり家づくり応援助成金",
+  "新型コロナウイルス感染症拡大防止のため、店舗等や住宅を「新しい生活様式」に対応させるために実施する工事にかかる経費の一部を助成します。": "新型コロナウイルス感染症拡大防止のため、店舗等や住宅を「新しい生活様式」に対応させるために実施する工事にかかる経費の一部を助成します。",
+  "市内の消費喚起を図り「非接触型」の決済による「新しい生活様式」の普及を促すことを目的に行う、スマートフォン決済によるポイント還元キャンペーン": "市内の消費喚起を図り「非接触型」の決済による「新しい生活様式」の普及を促すことを目的に行う、スマートフォン決済によるポイント還元キャンペーン",
+  "有志による飲食店応援サイト及びテイクアウト・デリバリー実施店舗を市ホームページで紹介します。": "有志による飲食店応援サイト及びテイクアウト・デリバリー実施店舗を市ホームページで紹介します。",
+  "サンキューさがみはら！最大25％戻ってくるキャンペーン": "サンキューさがみはら！最大25％戻ってくるキャンペーン",
+  "相模原市及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。": "相模原市及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。",
+  "市民利用施設に関する情報": "市民利用施設に関する情報",
+  "【飲食店の皆様へ】市内のテイクアウト・デリバリーができる飲食店の募集": "【飲食店の皆様へ】市内のテイクアウト・デリバリーができる飲食店の募集"
 }
