--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -708,5 +708,23 @@
   "サンキューさがみはら！最大25％戻ってくるキャンペーン": "サンキューさがみはら！最大25％戻ってくるキャンペーン",
   "相模原市及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。": "相模原市及び国の新型コロナウイルス感染症に関する支援策の情報をまとめています。",
   "市民利用施設に関する情報": "市民利用施設に関する情報",
-  "【飲食店の皆様へ】市内のテイクアウト・デリバリーができる飲食店の募集": "【飲食店の皆様へ】市内のテイクアウト・デリバリーができる飲食店の募集"
+  "【飲食店の皆様へ】市内のテイクアウト・デリバリーができる飲食店の募集": "【飲食店の皆様へ】市内のテイクアウト・デリバリーができる飲食店の募集",
+  "入院患者数（参考値）": "入院患者数（参考値）",
+  "新規陽性患者数（参考値）": "新規陽性患者数（参考値）",
+  "治療中": "治療中",
+  "人口10万人当たりの累積陽性者数（参考値）": "人口10万人当たりの累積陽性者数（参考値）",
+  "感染経路不明者の割合": "感染経路不明者の割合",
+  "（ ）内の数値は、前週の数値である": "（ ）内の数値は、前週の数値である",
+  "陽性患者増加比（参考値）": "陽性患者増加比（参考値）",
+  "医療機関": "医療機関",
+  "人口10万人当たりの累積新規陽性患者数": "人口10万人当たりの累積新規陽性患者数",
+  "相模原市医師会 新型コロナウイルス特設サイト": "相模原市医師会 新型コロナウイルス特設サイト",
+  "陽性患者増加比": "陽性患者増加比",
+  "陽性率（参考値）": "陽性率（参考値）",
+  "市発表分977人のうち、市内在住は852人（市外在住は125人）です。": "市発表分977人のうち、市内在住は852人（市外在住は125人）です。",
+  "モニタリング状況（集計期間：12月7日〜12月13日）": "モニタリング状況（集計期間：12月7日〜12月13日）",
+  "回復": "回復",
+  "感染経路不明者の割合（参考値）": "感染経路不明者の割合（参考値）",
+  "新規陽性患者数": "新規陽性患者数",
+  "（参考）": "（参考）"
 }
