--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -726,5 +726,6 @@
   "回復": "回復",
   "感染経路不明者の割合（参考値）": "感染経路不明者の割合（参考値）",
   "新規陽性患者数": "新規陽性患者数",
-  "（参考）": "（参考）"
+  "（参考）": "（参考）",
+  "人口10万人当たりの累積陽性者数": "人口10万人当たりの累積陽性者数"
 }
