--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -727,5 +727,19 @@
   "感染経路不明者の割合（参考値）": "感染経路不明者の割合（参考値）",
   "新規陽性患者数": "新規陽性患者数",
   "（参考）": "（参考）",
-  "人口10万人当たりの累積陽性者数": "人口10万人当たりの累積陽性者数"
+  "人口10万人当たりの累積陽性者数": "人口10万人当たりの累積陽性者数",
+  "陽性患者については、報道発表した数値を翌日の数値に反映している": "陽性患者については、報道発表した数値を翌日の数値に反映している",
+  "[ ] 内の数値は、前週の数値である": "[ ] 内の数値は、前週の数値である",
+  "（４）の数値は、｛直近1週間の感染経路不明者/直近1週間の新規陽性患者数｝で計算": "（４）の数値は、｛直近1週間の感染経路不明者/直近1週間の新規陽性患者数｝で計算",
+  "（１）新規陽性患者数": "（１）新規陽性患者数",
+  "（３）陽性患者増加比": "（３）陽性患者増加比",
+  "（６）入院患者数": "（６）入院患者数",
+  "（３）の数値は、｛当該週の新規陽性患者数/前週の新規陽性患者数｝で計算": "（３）の数値は、｛当該週の新規陽性患者数/前週の新規陽性患者数｝で計算",
+  "（４）感染経路不明者の割合": "（４）感染経路不明者の割合",
+  "参考値は、国の新型コロナウィルス感染症対策分科会で示された「今後想定される感染状況と対策について」のステージ1から4までのうち、ステージ3の指標を掲載。": "参考値は、国の新型コロナウィルス感染症対策分科会で示された「今後想定される感染状況と対策について」のステージ1から4までのうち、ステージ3の指標を掲載。",
+  "（５）の数値は、｛直近1週間の新規陽性患者数/市衛生研究所と民間検査機関の検査人数の合計｝で計算": "（５）の数値は、｛直近1週間の新規陽性患者数/市衛生研究所と民間検査機関の検査人数の合計｝で計算",
+  "（６）の数値は、｛当該週平日最終日時点の市公表分入院患者数｝である": "（６）の数値は、｛当該週平日最終日時点の市公表分入院患者数｝である",
+  "（２）人口10万人当たりの累積陽性者数": "（２）人口10万人当たりの累積陽性者数",
+  "（２）の数値は、｛直近1週間の累積新規陽性患者数/（本市人口/10万人）｝で計算": "（２）の数値は、｛直近1週間の累積新規陽性患者数/（本市人口/10万人）｝で計算",
+  "（５）陽性率": "（５）陽性率"
 }
