--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -741,5 +741,6 @@
   "（６）の数値は、｛当該週平日最終日時点の市公表分入院患者数｝である": "（６）の数値は、｛当該週平日最終日時点の市公表分入院患者数｝である",
   "（２）人口10万人当たりの累積陽性者数": "（２）人口10万人当たりの累積陽性者数",
   "（２）の数値は、｛直近1週間の累積新規陽性患者数/（本市人口/10万人）｝で計算": "（２）の数値は、｛直近1週間の累積新規陽性患者数/（本市人口/10万人）｝で計算",
-  "（５）陽性率": "（５）陽性率"
+  "（５）陽性率": "（５）陽性率",
+  "神奈川県からの最新のお知らせ": "神奈川県からの最新のお知らせ"
 }
