--- a/assets/locales/ja.json
+++ b/assets/locales/ja.json
@@ -742,5 +742,9 @@
   "（２）人口10万人当たりの累積陽性者数": "（２）人口10万人当たりの累積陽性者数",
   "（２）の数値は、｛直近1週間の累積新規陽性患者数/（本市人口/10万人）｝で計算": "（２）の数値は、｛直近1週間の累積新規陽性患者数/（本市人口/10万人）｝で計算",
   "（５）陽性率": "（５）陽性率",
-  "神奈川県からの最新のお知らせ": "神奈川県からの最新のお知らせ"
+  "神奈川県からの最新のお知らせ": "神奈川県からの最新のお知らせ",
+  "新型コロナウイルス対策ページ（相模原市公式サイト）": "新型コロナウイルス対策ページ（相模原市公式サイト）",
+  "当サイトの更新時間について": "当サイトの更新時間について",
+  "市発表分997人のうち、市内在住は869人（市外在住は128人）です。": "市発表分997人のうち、市内在住は869人（市外在住は128人）です。",
+  "当サイトは、毎日18時〜22時の間に更新しています。更新日時を確認する場合には、上の最新更新日時を確認してください。下記リンクの方が、情報更新が速いことがありますのでこちらもご確認ください。": "当サイトは、毎日18時〜22時の間に更新しています。更新日時を確認する場合には、上の最新更新日時を確認してください。下記リンクの方が、情報更新が速いことがありますのでこちらもご確認ください。"
 }
